test/e2e/labels/values.yaml
useHttps: false

opa: null

authz:
  enabled: false

mgmt:
  startupProbe:
    httpGet:
      scheme: HTTP
  extraArgs:
    - "--policy-label=qweqwe/policy"
    - "--policy-value=111"
    - "--data-label=asdasd/data"
    - "--data-value=222"
